--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,15 +2,15 @@
 	"compilerOptions": {
 		"module": "commonjs",
 		"target": "ES2020",
-	
 		"lib": [
 			"ES2020"
 		],
-		"sourceMap": false,
+		"sourceMap": true,
 		"rootDir": "src",
+		"outDir": "dist",
 		"allowJs": true,
 		"checkJs": false,
-		"strict": false   /* enable all strict type-checking options */
+		"strict": false, /* enable all strict type-checking options */
 		/* Additional Checks */
 		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
 		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
