modify setting name

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "openaipoweredsnippet",
 	"displayName": "GPT Prompt Integrator",
 	"description": "The Visual Studio Code extension enables developers to integrate the ChatGPT prompt into VS Code",
-	"version": "0.0.21",
+	"version": "0.0.22",
 	"icon": "media/icon.png",
 	"keywords": [
 		"chatgpt",
@@ -47,7 +47,7 @@
 			}
 		],
 		"configuration": {
-			"title": "OpenAI Powered Snippets",
+			"title": "GPT Prompt Integrator",
 			"type": "object",
 			"properties": {
 				"openaipoweredsnippet.openAIToken": {
