--- a/.github/workflows/create-release-pr.yaml
+++ b/.github/workflows/create-release-pr.yaml
@@ -26,14 +26,14 @@ jobs:
           script: |
             const version = require('./package.json').version;
             console.log(version);
-            console.log(`NEW_VERSION=${version}`)
+            console.log(`::set-env name=NEW_VERSION::${version}`)
 
       - name: Create pr
         env:
           NEW_VERSION: ${{ env.NEW_VERSION }}
         run: |
           echo "new_version=${NEW_VERSION}" >> $GITHUB_ENV
-
+          echo ${NEW_VERSION}
           git checkout -b "release/${NEW_VERSION}"
           git push --set-upstream origin "release/${NEW_VERSION}"
 
