--- a/.github/workflows/create-release-pr.yaml
+++ b/.github/workflows/create-release-pr.yaml
@@ -26,13 +26,15 @@ jobs:
           script: |
             const version = require('./package.json').version;
             console.log(version);
-            console.log(`::set-env name=NEW_VERSION::${version}`)
+            core.setOutput('NEW_VERSION', version);
+
+      - name: Set environment variable
+        run: echo "NEW_VERSION=${{ steps.check-version.outputs.NEW_VERSION }}" >> $GITHUB_ENV
 
       - name: Create pr
         env:
           NEW_VERSION: ${{ env.NEW_VERSION }}
         run: |
-          echo "new_version=${NEW_VERSION}" >> $GITHUB_ENV
           echo ${NEW_VERSION}
           git checkout -b "release/${NEW_VERSION}"
           git push --set-upstream origin "release/${NEW_VERSION}"
