--- a/.github/workflows/create-release-pr.yaml
+++ b/.github/workflows/create-release-pr.yaml
@@ -35,10 +35,10 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           echo ${NEW_VERSION}
-          git checkout -b "release/${NEW_VERSION}"
-          git push --set-upstream origin "release/${NEW_VERSION}"
+          git checkout -b "release-${NEW_VERSION}"
+          git push --set-upstream origin "release-${NEW_VERSION}"
 
           gh pr create \
             --title "Release version ${NEW_VERSION}" \
             --base release \
-            --head "release/${NEW_VERSION}"
+            --head "release-${NEW_VERSION}"
